--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ Make it mobily responsive
   <title>3 Sites</title>
 
   <script src="https://kit.fontawesome.com/40f4eba692.js" crossorigin="anonymous"></script>
+  
+  <link rel="stylesheet" href="styles/common.css">
 </head>
 <body>
   <div class="page-content">
@@ -72,7 +74,7 @@ Make it mobily responsive
         </div>
 
         <div class="contact-buttons">
-          <a href="/pages/contact.html">i Contact</a>
+          <a href="/pages/contact.html"><i class="fa-solid fa-envelope"></i> Contact</a>
         </div>
       </div>
 
