--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,12 +11,14 @@
   <link rel="stylesheet" href="contact.html">
 
   <script src="https://kit.fontawesome.com/40f4eba692.js" crossorigin="anonymous"></script>
+    
+  <link rel="stylesheet" href="/styles/common.css">
 </head>
 <body>
   <div class="page-content">
     <div class="navbar">
       <div class="link-wrapper">
-        <a href="#"><i class="fa-solid fa-house-chimney"></i> Home</a>
+        <a href="/index.html"><i class="fa-solid fa-house-chimney"></i> Home</a>
       </div>
       
       <div class="link-wrapper">
@@ -75,7 +77,7 @@
         </div>
 
         <div class="contact-buttons">
-          <a href="#">i Contact</a>
+          <a href="#"><i class="fa-solid fa-envelope"></i> Contact</a>
         </div>
       </div>
 
