--- a/pages/faq.html
+++ b/pages/faq.html
@@ -7,6 +7,8 @@
   <title>FAQ</title>
 
   <script src="https://kit.fontawesome.com/40f4eba692.js" crossorigin="anonymous"></script>
+    
+  <link rel="stylesheet" href="/styles/common.css">
 </head>
 <body>
   <div class="page-content">
@@ -72,7 +74,7 @@
         </div>
 
         <div class="contact-buttons">
-          <a href="/pages/contact.html">i Contact</a>
+          <a href="/pages/contact.html"><i class="fa-solid fa-envelope"></i> Contact</a>
         </div>
       </div>
 
